--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,15 +21,15 @@
             justify-content: space-between;
         }
         .navbar .logo {
-            font-size: 1.7rem;
-            font-weight: 700;
-            color: #3a8ee6;
-            letter-spacing: 2px;
-            display: flex;
-            align-items: center;
-        }
-        .navbar .logo i {
-            margin-right: 10px;
+            font-size: 2rem;
+            font-weight: 800;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            letter-spacing: 3px;
+            font-family: 'Trebuchet MS', sans-serif;
+            text-transform: uppercase;
         }
         .navbar nav a {
             margin: 0 1rem;
@@ -139,7 +139,7 @@
 </head>
 <body>
     <div class="navbar">
-        <div class="logo"><i class="fas fa-palette"></i>Sigiri</div>
+        <div class="logo">SIGIRI</div>
         <nav>
             <a href="#">Home</a>
             <a href="#">Templates</a>
