--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,14 +11,73 @@
             font-family: 'Segoe UI', Arial, sans-serif;
             background: linear-gradient(120deg, #e0eafc 0%, #cfdef3 100%);
             color: #222;
+            position: relative;
+            overflow-x: hidden;
+        }
+        .animated-bg {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+            overflow: hidden;
+        }
+        .floating-shape {
+            position: absolute;
+            border-radius: 50%;
+            opacity: 0.15;
+            animation: float 20s infinite ease-in-out;
+        }
+        .shape1 {
+            width: 300px;
+            height: 300px;
+            background: linear-gradient(135deg, #667eea, #764ba2);
+            top: 10%;
+            left: 10%;
+            animation-delay: 0s;
+        }
+        .shape2 {
+            width: 200px;
+            height: 200px;
+            background: linear-gradient(135deg, #f093fb, #f5576c);
+            top: 60%;
+            right: 15%;
+            animation-delay: 3s;
+        }
+        .shape3 {
+            width: 250px;
+            height: 250px;
+            background: linear-gradient(135deg, #4facfe, #00f2fe);
+            bottom: 10%;
+            left: 20%;
+            animation-delay: 6s;
+        }
+        @keyframes float {
+            0%, 100% {
+                transform: translateY(0) rotate(0deg);
+            }
+            25% {
+                transform: translateY(-30px) rotate(5deg);
+            }
+            50% {
+                transform: translateY(20px) rotate(-5deg);
+            }
+            75% {
+                transform: translateY(-15px) rotate(3deg);
+            }
         }
         .navbar {
-            background: #fff;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.04);
-            padding: 0.5rem 2rem;
+            background: rgba(255, 255, 255, 0.95);
+            backdrop-filter: blur(10px);
+            box-shadow: 0 2px 20px rgba(0,0,0,0.08);
+            padding: 0.8rem 2rem;
             display: flex;
             align-items: center;
             justify-content: space-between;
+            position: sticky;
+            top: 0;
+            z-index: 100;
         }
         .navbar .logo {
             font-size: 2rem;
@@ -43,34 +102,70 @@
         }
         .hero {
             text-align: center;
-            padding: 80px 20px 40px;
+            padding: 100px 20px 60px;
+            position: relative;
         }
         .hero h1 {
-            font-size: 3.5rem;
+            font-size: 3.8rem;
             font-weight: 800;
-            color: #3a8ee6;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 50%, #f093fb 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
             margin-bottom: 20px;
+            animation: fadeInUp 1s ease-out;
         }
         .hero p {
-            font-size: 1.3rem;
+            font-size: 1.4rem;
             color: #555;
             margin-bottom: 40px;
+            animation: fadeInUp 1.2s ease-out;
+        }
+        @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(30px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
         .cta-btn {
-            background: linear-gradient(90deg, #3a8ee6 0%, #6dd5ed 100%);
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: #fff;
             border: none;
             padding: 18px 48px;
             font-size: 1.2rem;
-            border-radius: 30px;
+            border-radius: 50px;
             font-weight: 700;
             cursor: pointer;
-            box-shadow: 0 4px 16px rgba(58,142,230,0.12);
-            transition: background 0.2s, transform 0.2s;
+            box-shadow: 0 10px 30px rgba(102, 126, 234, 0.4);
+            transition: all 0.3s ease;
+            animation: fadeInUp 1.4s ease-out;
+            position: relative;
+            overflow: hidden;
+        }
+        .cta-btn::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(135deg, #764ba2 0%, #667eea 100%);
+            transition: left 0.3s ease;
+        }
+        .cta-btn span {
+            position: relative;
+            z-index: 1;
+        }
+        .cta-btn:hover::before {
+            left: 0;
         }
         .cta-btn:hover {
-            background: linear-gradient(90deg, #6dd5ed 0%, #3a8ee6 100%);
-            transform: translateY(-2px) scale(1.04);
+            transform: translateY(-3px) scale(1.05);
+            box-shadow: 0 15px 40px rgba(102, 126, 234, 0.5);
         }
         .tools-section {
             max-width: 1100px;
@@ -90,22 +185,33 @@
             gap: 30px;
         }
         .tool-card {
-            background: #fff;
-            border-radius: 18px;
-            box-shadow: 0 2px 12px rgba(58,142,230,0.08);
+            background: rgba(255, 255, 255, 0.9);
+            backdrop-filter: blur(10px);
+            border-radius: 20px;
+            box-shadow: 0 4px 20px rgba(58,142,230,0.1);
             padding: 32px 24px;
             text-align: center;
-            transition: box-shadow 0.2s, transform 0.2s;
+            transition: all 0.3s ease;
             cursor: pointer;
+            border: 1px solid rgba(255, 255, 255, 0.5);
         }
         .tool-card:hover {
-            box-shadow: 0 8px 32px rgba(58,142,230,0.18);
-            transform: translateY(-4px) scale(1.03);
+            background: rgba(255, 255, 255, 1);
+            box-shadow: 0 12px 40px rgba(102, 126, 234, 0.2);
+            transform: translateY(-8px) scale(1.02);
+            border-color: rgba(102, 126, 234, 0.3);
         }
         .tool-card i {
-            font-size: 2.5rem;
-            color: #3a8ee6;
+            font-size: 2.8rem;
+            background: linear-gradient(135deg, #667eea, #764ba2);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
             margin-bottom: 18px;
+            transition: transform 0.3s ease;
+        }
+        .tool-card:hover i {
+            transform: scale(1.1) rotate(5deg);
         }
         .tool-card h3 {
             font-size: 1.2rem;
@@ -138,6 +244,11 @@
     </style>
 </head>
 <body>
+    <div class="animated-bg">
+        <div class="floating-shape shape1"></div>
+        <div class="floating-shape shape2"></div>
+        <div class="floating-shape shape3"></div>
+    </div>
     <div class="navbar">
         <div class="logo">SIGIRI</div>
         <nav>
@@ -151,7 +262,7 @@
     <section class="hero">
         <h1>Design Anything, Effortlessly</h1>
         <p>Create stunning graphics, presentations, and more with Sigiri's easy-to-use online design studio. No experience required!</p>
-        <button class="cta-btn">Start Designing</button>
+        <button class="cta-btn"><span>Start Designing</span></button>
     </section>
     <section class="tools-section">
         <div class="tools-title">Popular Design Tools</div>
