Update hero heading to emphasize AI-powered design capabilities

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -260,8 +260,8 @@
         </nav>
     </div>
     <section class="hero">
-        <h1>Design Anything, Effortlessly</h1>
-        <p>Create stunning graphics, presentations, and more with Sigiri's easy-to-use online design studio. No experience required!</p>
+        <h1>AI-Powered Design Studio</h1>
+        <p>Create stunning graphics, presentations, and more with Sigiri's intelligent design tools. Let AI do the heavy lifting!</p>
         <button class="cta-btn"><span>Start Designing</span></button>
     </section>
     <section class="tools-section">
