--- a/frontend/login.html
+++ b/frontend/login.html
@@ -214,17 +214,19 @@
             align-items: center;
             justify-content: center;
             padding: 14px 20px;
-            background: #f5f5f5;
-            border: none;
+            border: 2px solid #e0e0e0;
             border-radius: 10px;
+            background: white;
             cursor: pointer;
-            transition: background 0.2s;
-            font-size: 0.95rem;
-            color: #666;
-            margin-top: 15px;
+            transition: all 0.2s;
+            font-size: 1rem;
+            font-weight: 600;
+            color: #333;
+            margin-bottom: 30px;
         }
         .work-email-btn:hover {
-            background: #e8e8e8;
+            border-color: #667eea;
+            background: #f8f9ff;
         }
         .work-email-btn i {
             margin-right: 8px;
@@ -267,6 +269,13 @@
                 </button>
             </div>
 
+            <div class="divider">OR</div>
+
+            <button class="social-btn work-email-btn">
+                <i class="fas fa-briefcase"></i>
+                Sign up with your work email
+            </button>
+
             <form class="email-form" id="emailForm">
                 <div class="form-group">
                     <label for="email">Email</label>
@@ -278,13 +287,6 @@
                 </div>
                 <button type="submit" class="submit-btn">Continue</button>
             </form>
-
-            <div class="divider">OR</div>
-
-            <button class="work-email-btn">
-                <i class="fas fa-briefcase"></i>
-                Sign up with your work email
-            </button>
 
             <div class="toggle-form">
                 By continuing, you agree to Sigiri's <a href="#">Terms of Use</a>. Read our <a href="#">Privacy Policy</a>.
