--- a/frontend/login.html
+++ b/frontend/login.html
@@ -222,11 +222,15 @@
             font-size: 1rem;
             font-weight: 600;
             color: #333;
-            margin-bottom: 30px;
         }
         .work-email-btn:hover {
             border-color: #667eea;
             background: #f8f9ff;
+        }
+        .work-email-btn i {
+            margin-right: 12px;
+            font-size: 1.3rem;
+            color: #666;
         }
         .work-email-btn i {
             margin-right: 8px;
@@ -267,14 +271,11 @@
                     <i class="fas fa-envelope"></i>
                     Continue with email
                 </button>
+                <button class="social-btn work-email-btn">
+                    <i class="fas fa-briefcase"></i>
+                    Sign up with your work email
+                </button>
             </div>
-
-            <div class="divider">OR</div>
-
-            <button class="social-btn work-email-btn">
-                <i class="fas fa-briefcase"></i>
-                Sign up with your work email
-            </button>
 
             <form class="email-form" id="emailForm">
                 <div class="form-group">
