--- a/frontend/index.html
+++ b/frontend/index.html
@@ -292,7 +292,7 @@
     <div class="navbar">
         <div class="logo">SIGIRI</div>
                 <nav>
-            <a href="#features">Features</a>
+            <a href="features.html">Features</a>
             <a href="#templates">Templates</a>
             <a href="#pricing">Pricing</a>
             <a href="#learn">Learn</a>
