--- a/frontend/features.html
+++ b/frontend/features.html
@@ -281,9 +281,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="features.html">Features</a>
-            <a href="#templates">Templates</a>
-            <a href="#pricing">Pricing</a>
-            <a href="#learn">Learn</a>
+            <a href="pricing.html">Pricing</a>
         </nav>
         <div class="nav-actions">
             <a href="login.html" class="nav-btn btn-login">Log in</a>
