--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -18,6 +18,7 @@
             display: flex;
             position: relative;
             overflow-x: hidden;
+            overflow-y: auto;
         }
         
         /* Animated Background Shapes */
@@ -159,6 +160,9 @@
             flex-direction: column;
             position: relative;
             z-index: 1;
+            min-height: 100vh;
+            overflow-x: hidden;
+            overflow-y: auto;
         }
         
         /* Top Navbar */
@@ -223,6 +227,8 @@
             backdrop-filter: blur(20px);
             padding: 30px 3rem;
             border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+            position: relative;
+            z-index: 10;
         }
         .search-bar {
             display: flex;
@@ -324,6 +330,8 @@
             backdrop-filter: blur(20px);
             border-bottom: 1px solid rgba(255, 255, 255, 0.3);
             flex-wrap: wrap;
+            position: relative;
+            z-index: 5;
         }
         .action-icon-item {
             text-align: center;
@@ -409,6 +417,8 @@
             padding: 40px 3rem;
             max-width: 1600px;
             margin: 0 auto;
+            width: 100%;
+            flex: 1;
         }
 
         /* Section Header */
@@ -753,20 +763,22 @@
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
             gap: 20px;
+            margin-bottom: 40px;
         }
         .template-card {
-            background: rgba(255, 255, 255, 0.9);
+            background: rgba(255, 255, 255, 0.95);
             backdrop-filter: blur(10px);
             border-radius: 12px;
             overflow: hidden;
             cursor: pointer;
             transition: all 0.3s;
-            border: 1px solid rgba(255, 255, 255, 0.5);
+            border: 2px solid rgba(255, 255, 255, 0.8);
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
         }
         .template-card:hover {
             transform: translateY(-5px);
             box-shadow: 0 12px 35px rgba(0, 0, 0, 0.15);
+            border-color: rgba(102, 126, 234, 0.3);
         }
         .template-thumbnail {
             width: 100%;
