Fix font colors for better visibility - dark text on transparent background, gradient titles

--- a/frontend/converters.html
+++ b/frontend/converters.html
@@ -191,16 +191,21 @@
         .page-header {
             text-align: center;
             margin-bottom: 35px;
-            color: white;
+            color: #333;
         }
         .page-header h1 {
             font-size: 2.4rem;
             margin-bottom: 12px;
             font-weight: 800;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
         }
         .page-header p {
             font-size: 1rem;
-            opacity: 0.95;
+            opacity: 0.8;
+            color: #555;
         }
 
         /* Converter Categories */
@@ -212,12 +217,12 @@
         }
         .category-header h2 {
             font-size: 1.5rem;
-            color: white;
+            color: #333;
             font-weight: 700;
             margin-bottom: 8px;
         }
         .category-header p {
-            color: rgba(255, 255, 255, 0.9);
+            color: #666;
             font-size: 0.9rem;
         }
 
