--- a/frontend/templates.html
+++ b/frontend/templates.html
@@ -280,7 +280,7 @@
         }
         .category-header h2 {
             font-size: 1.3rem;
-            color: white;
+            color: #333;
             font-weight: 700;
         }
         .templates-grid {
