--- a/frontend/projects.html
+++ b/frontend/projects.html
@@ -256,7 +256,10 @@
         }
         .page-header h1 {
             font-size: 1.6rem;
-            color: white;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
             margin-bottom: 15px;
             font-weight: 700;
         }
@@ -314,7 +317,7 @@
         }
         .section-title {
             font-size: 1.1rem;
-            color: white;
+            color: #333;
             margin-bottom: 16px;
             font-weight: 600;
         }
