--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -723,9 +723,9 @@
         /* Create New Project Card */
         .create-project-card {
             min-width: 240px;
-            background: rgba(255, 255, 255, 0.6);
+            background: linear-gradient(135deg, rgba(102, 126, 234, 0.95) 0%, rgba(118, 75, 162, 0.95) 100%);
             backdrop-filter: blur(25px);
-            border: 3px dashed rgba(102, 126, 234, 0.4);
+            border: 2px solid rgba(255, 255, 255, 0.3);
             border-radius: 14px;
             display: flex;
             flex-direction: column;
@@ -736,6 +736,7 @@
             min-height: 220px;
             position: relative;
             overflow: hidden;
+            box-shadow: 0 8px 25px rgba(102, 126, 234, 0.3);
         }
         .create-project-card::before {
             content: '';
@@ -744,39 +745,53 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: linear-gradient(135deg, rgba(102, 126, 234, 0.05) 0%, rgba(118, 75, 162, 0.05) 100%);
+            background: linear-gradient(135deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.05) 100%);
             opacity: 0;
             transition: opacity 0.4s;
+        }
+        .create-project-card::after {
+            content: '';
+            position: absolute;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: radial-gradient(circle, rgba(255, 255, 255, 0.15) 0%, transparent 70%);
+            opacity: 0;
+            transition: opacity 0.6s;
         }
         .create-project-card:hover::before {
             opacity: 1;
         }
+        .create-project-card:hover::after {
+            opacity: 1;
+        }
         .create-project-card:hover {
-            border-color: #667eea;
-            background: rgba(255, 255, 255, 0.95);
-            box-shadow: 0 12px 35px rgba(102, 126, 234, 0.2);
-            transform: translateY(-6px);
+            border-color: rgba(255, 255, 255, 0.5);
+            box-shadow: 0 15px 45px rgba(102, 126, 234, 0.4), 0 0 30px rgba(118, 75, 162, 0.2);
+            transform: translateY(-8px) scale(1.02);
         }
         .create-project-card i {
             font-size: 3rem;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
+            color: white;
             margin-bottom: 12px;
             position: relative;
             z-index: 1;
-            transition: transform 0.3s;
+            transition: all 0.4s;
+            filter: drop-shadow(0 4px 8px rgba(0, 0, 0, 0.2));
         }
         .create-project-card:hover i {
-            transform: scale(1.1) rotate(90deg);
+            transform: scale(1.15) rotate(180deg);
+            filter: drop-shadow(0 6px 12px rgba(0, 0, 0, 0.3));
         }
         .create-project-card p {
-            color: #666;
-            font-weight: 600;
-            font-size: 0.9rem;
+            color: white;
+            font-weight: 700;
+            font-size: 0.95rem;
             position: relative;
             z-index: 1;
+            text-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            letter-spacing: 0.5px;
         }
 
         /* Templates Section */
