--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -868,6 +868,198 @@
                 grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
             }
         }
+
+        /* Create Modal */
+        .create-modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: rgba(0, 0, 0, 0.6);
+            backdrop-filter: blur(8px);
+            z-index: 10000;
+            animation: fadeIn 0.3s ease;
+        }
+        .create-modal.active {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+        @keyframes slideUp {
+            from { 
+                opacity: 0;
+                transform: translateY(30px) scale(0.95);
+            }
+            to { 
+                opacity: 1;
+                transform: translateY(0) scale(1);
+            }
+        }
+        .create-modal-content {
+            background: white;
+            border-radius: 16px;
+            width: 90%;
+            max-width: 1100px;
+            max-height: 85vh;
+            overflow: hidden;
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
+            animation: slideUp 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+            display: flex;
+            flex-direction: column;
+        }
+        .create-modal-header {
+            padding: 24px 32px;
+            border-bottom: 1px solid #e5e5e5;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .create-modal-header h2 {
+            font-size: 1.8rem;
+            color: #222;
+            font-weight: 700;
+        }
+        .modal-close {
+            width: 36px;
+            height: 36px;
+            border-radius: 50%;
+            background: #f5f5f5;
+            border: none;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: all 0.2s;
+            font-size: 1.2rem;
+            color: #666;
+        }
+        .modal-close:hover {
+            background: #e5e5e5;
+            transform: rotate(90deg);
+        }
+        .create-modal-body {
+            display: flex;
+            flex: 1;
+            overflow: hidden;
+        }
+        .modal-sidebar {
+            width: 240px;
+            background: #f9f9f9;
+            padding: 20px 0;
+            overflow-y: auto;
+            border-right: 1px solid #e5e5e5;
+        }
+        .modal-sidebar-item {
+            padding: 12px 24px;
+            display: flex;
+            align-items: center;
+            gap: 12px;
+            cursor: pointer;
+            transition: all 0.2s;
+            color: #555;
+            font-size: 0.95rem;
+            font-weight: 500;
+        }
+        .modal-sidebar-item:hover {
+            background: #f0f0f0;
+        }
+        .modal-sidebar-item.active {
+            background: white;
+            color: #667eea;
+            border-left: 3px solid #667eea;
+        }
+        .modal-sidebar-item i {
+            font-size: 1.1rem;
+            width: 20px;
+        }
+        .modal-content-area {
+            flex: 1;
+            padding: 32px;
+            overflow-y: auto;
+        }
+        .modal-search {
+            margin-bottom: 28px;
+        }
+        .modal-search input {
+            width: 100%;
+            padding: 12px 20px;
+            border: 1px solid #ddd;
+            border-radius: 10px;
+            font-size: 0.95rem;
+            outline: none;
+            transition: all 0.2s;
+        }
+        .modal-search input:focus {
+            border-color: #667eea;
+            box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
+        }
+        .modal-section-title {
+            font-size: 1.1rem;
+            color: #222;
+            font-weight: 700;
+            margin-bottom: 16px;
+        }
+        .modal-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+            gap: 20px;
+            margin-bottom: 32px;
+        }
+        .modal-design-card {
+            background: #f9f9f9;
+            border-radius: 12px;
+            overflow: hidden;
+            cursor: pointer;
+            transition: all 0.3s;
+            border: 2px solid transparent;
+        }
+        .modal-design-card:hover {
+            border-color: #667eea;
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+            transform: translateY(-4px);
+        }
+        .modal-design-preview {
+            width: 100%;
+            height: 140px;
+            background: linear-gradient(135deg, #e0e7ff 0%, #cfe2ff 100%);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: relative;
+        }
+        .modal-design-card:nth-child(2) .modal-design-preview {
+            background: linear-gradient(135deg, #fce4ec 0%, #f8bbd0 100%);
+        }
+        .modal-design-card:nth-child(3) .modal-design-preview {
+            background: linear-gradient(135deg, #fff3e0 0%, #ffe0b2 100%);
+        }
+        .modal-design-card:nth-child(4) .modal-design-preview {
+            background: linear-gradient(135deg, #e8f5e9 0%, #c8e6c9 100%);
+        }
+        .modal-design-preview i {
+            font-size: 3rem;
+            opacity: 0.4;
+        }
+        .modal-design-info {
+            padding: 12px;
+            text-align: center;
+        }
+        .modal-design-info h4 {
+            font-size: 0.9rem;
+            color: #222;
+            font-weight: 600;
+            margin-bottom: 4px;
+        }
+        .modal-design-info p {
+            font-size: 0.8rem;
+            color: #999;
+        }
     </style>
 </head>
 <body>
@@ -1578,8 +1770,216 @@
                 }
             });
         });
+
+        // Create Modal functionality
+        const createBtn = document.querySelector('.sidebar-item.create-btn');
+        const createModal = document.getElementById('createModal');
+        const modalClose = document.querySelector('.modal-close');
+
+        createBtn.addEventListener('click', function() {
+            createModal.classList.add('active');
+            document.body.style.overflow = 'hidden';
+        });
+
+        modalClose.addEventListener('click', function() {
+            createModal.classList.remove('active');
+            document.body.style.overflow = 'auto';
+        });
+
+        createModal.addEventListener('click', function(e) {
+            if (e.target === createModal) {
+                createModal.classList.remove('active');
+                document.body.style.overflow = 'auto';
+            }
+        });
+
+        // Modal sidebar navigation
+        const modalSidebarItems = document.querySelectorAll('.modal-sidebar-item');
+        modalSidebarItems.forEach(item => {
+            item.addEventListener('click', function() {
+                modalSidebarItems.forEach(i => i.classList.remove('active'));
+                this.classList.add('active');
+                // Here you can add logic to show different content based on selection
+            });
+        });
     </script>
 
+    <!-- Create Modal -->
+    <div class="create-modal" id="createModal">
+        <div class="create-modal-content">
+            <div class="create-modal-header">
+                <h2>Create a design</h2>
+                <button class="modal-close">
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+            <div class="create-modal-body">
+                <div class="modal-sidebar">
+                    <div class="modal-sidebar-item active">
+                        <i class="fas fa-star"></i>
+                        <span>For you</span>
+                    </div>
+                    <div class="modal-sidebar-item">
+                        <i class="fas fa-envelope"></i>
+                        <span>Emails</span>
+                    </div>
+                    <div class="modal-sidebar-item">
+                        <i class="fas fa-presentation"></i>
+                        <span>Presentations</span>
+                    </div>
+                    <div class="modal-sidebar-item">
+                        <i class="fas fa-heart"></i>
+                        <span>Social media</span>
+                    </div>
+                    <div class="modal-sidebar-item">
+                        <i class="fas fa-camera"></i>
+                        <span>Photo editor</span>
+                    </div>
+                    <div class="modal-sidebar-item">
+                        <i class="fas fa-video"></i>
+                        <span>Videos</span>
+                    </div>
+                    <div class="modal-sidebar-item">
+                        <i class="fas fa-file-alt"></i>
+                        <span>Docs</span>
+                    </div>
+                    <div class="modal-sidebar-item">
+                        <i class="fas fa-chalkboard"></i>
+                        <span>Whiteboards</span>
+                    </div>
+                    <div class="modal-sidebar-item">
+                        <i class="fas fa-table"></i>
+                        <span>Sheets</span>
+                    </div>
+                    <div class="modal-sidebar-item">
+                        <i class="fas fa-globe"></i>
+                        <span>Websites</span>
+                    </div>
+                    <div class="modal-sidebar-item">
+                        <i class="fas fa-ruler-combined"></i>
+                        <span>Custom size</span>
+                    </div>
+                    <div class="modal-sidebar-item">
+                        <i class="fas fa-cloud-upload-alt"></i>
+                        <span>Upload</span>
+                    </div>
+                </div>
+                <div class="modal-content-area">
+                    <div class="modal-search">
+                        <input type="text" placeholder="What would you like to create?">
+                    </div>
+                    
+                    <div class="modal-section-title">Popular</div>
+                    <div class="modal-grid">
+                        <div class="modal-design-card">
+                            <div class="modal-design-preview">
+                                <i class="fas fa-chalkboard-teacher"></i>
+                            </div>
+                            <div class="modal-design-info">
+                                <h4>Course</h4>
+                            </div>
+                        </div>
+                        <div class="modal-design-card">
+                            <div class="modal-design-preview">
+                                <i class="fas fa-chalkboard"></i>
+                            </div>
+                            <div class="modal-design-info">
+                                <h4>Whiteboard</h4>
+                            </div>
+                        </div>
+                        <div class="modal-design-card">
+                            <div class="modal-design-preview">
+                                <i class="fas fa-file-alt"></i>
+                            </div>
+                            <div class="modal-design-info">
+                                <h4>Doc</h4>
+                            </div>
+                        </div>
+                        <div class="modal-design-card">
+                            <div class="modal-design-preview">
+                                <i class="fas fa-presentation"></i>
+                            </div>
+                            <div class="modal-design-info">
+                                <h4>Presentation (16:9)</h4>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="modal-section-title">Common layouts and sizes</div>
+                    <div class="modal-grid">
+                        <div class="modal-design-card">
+                            <div class="modal-design-preview">
+                                <i class="fas fa-image"></i>
+                            </div>
+                            <div class="modal-design-info">
+                                <h4>Poster (Portrait A2)</h4>
+                            </div>
+                        </div>
+                        <div class="modal-design-card">
+                            <div class="modal-design-preview">
+                                <i class="fas fa-square"></i>
+                            </div>
+                            <div class="modal-design-info">
+                                <h4>Card (Square)</h4>
+                            </div>
+                        </div>
+                        <div class="modal-design-card">
+                            <div class="modal-design-preview">
+                                <i class="fas fa-file"></i>
+                            </div>
+                            <div class="modal-design-info">
+                                <h4>Document (A4 Portrait)</h4>
+                            </div>
+                        </div>
+                        <div class="modal-design-card">
+                            <div class="modal-design-preview">
+                                <i class="fas fa-file-alt"></i>
+                            </div>
+                            <div class="modal-design-info">
+                                <h4>A5 Document</h4>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="modal-section-title">Office and business</div>
+                    <div class="modal-grid">
+                        <div class="modal-design-card">
+                            <div class="modal-design-preview">
+                                <i class="fas fa-file-invoice"></i>
+                            </div>
+                            <div class="modal-design-info">
+                                <h4>Invoice</h4>
+                            </div>
+                        </div>
+                        <div class="modal-design-card">
+                            <div class="modal-design-preview">
+                                <i class="fas fa-id-card"></i>
+                            </div>
+                            <div class="modal-design-info">
+                                <h4>Business Card</h4>
+                            </div>
+                        </div>
+                        <div class="modal-design-card">
+                            <div class="modal-design-preview">
+                                <i class="fas fa-file-alt"></i>
+                            </div>
+                            <div class="modal-design-info">
+                                <h4>Letter</h4>
+                            </div>
+                        </div>
+                        <div class="modal-design-card">
+                            <div class="modal-design-preview">
+                                <i class="fas fa-file-contract"></i>
+                            </div>
+                            <div class="modal-design-info">
+                                <h4>Resume</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
