--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -904,9 +904,9 @@
         .create-modal-content {
             background: white;
             border-radius: 16px;
-            width: 90%;
-            max-width: 1100px;
-            max-height: 85vh;
+            width: 95%;
+            max-width: 1400px;
+            max-height: 90vh;
             overflow: hidden;
             box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
             animation: slideUp 0.4s cubic-bezier(0.4, 0, 0.2, 1);
@@ -914,16 +914,44 @@
             flex-direction: column;
         }
         .create-modal-header {
-            padding: 24px 32px;
+            padding: 20px 32px;
             border-bottom: 1px solid #e5e5e5;
             display: flex;
             justify-content: space-between;
             align-items: center;
+            gap: 24px;
         }
         .create-modal-header h2 {
-            font-size: 1.8rem;
+            font-size: 1.5rem;
             color: #222;
             font-weight: 700;
+            white-space: nowrap;
+        }
+        .modal-header-search {
+            flex: 1;
+            max-width: 600px;
+            position: relative;
+        }
+        .modal-header-search input {
+            width: 100%;
+            padding: 12px 20px 12px 48px;
+            border: 1px solid #ddd;
+            border-radius: 10px;
+            font-size: 0.95rem;
+            outline: none;
+            transition: all 0.2s;
+        }
+        .modal-header-search input:focus {
+            border-color: #667eea;
+            box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
+        }
+        .modal-header-search i {
+            position: absolute;
+            left: 18px;
+            top: 50%;
+            transform: translateY(-50%);
+            color: #999;
+            font-size: 1rem;
         }
         .modal-close {
             width: 36px;
@@ -982,22 +1010,6 @@
             flex: 1;
             padding: 32px;
             overflow-y: auto;
-        }
-        .modal-search {
-            margin-bottom: 28px;
-        }
-        .modal-search input {
-            width: 100%;
-            padding: 12px 20px;
-            border: 1px solid #ddd;
-            border-radius: 10px;
-            font-size: 0.95rem;
-            outline: none;
-            transition: all 0.2s;
-        }
-        .modal-search input:focus {
-            border-color: #667eea;
-            box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
         }
         .modal-section-title {
             font-size: 1.1rem;
@@ -1823,6 +1835,10 @@
         <div class="create-modal-content">
             <div class="create-modal-header">
                 <h2>Create a design</h2>
+                <div class="modal-header-search">
+                    <i class="fas fa-search"></i>
+                    <input type="text" placeholder="What would you like to create?">
+                </div>
                 <button class="modal-close">
                     <i class="fas fa-times"></i>
                 </button>
@@ -1879,10 +1895,6 @@
                     </div>
                 </div>
                 <div class="modal-content-area">
-                    <div class="modal-search">
-                        <input type="text" placeholder="What would you like to create?">
-                    </div>
-                    
                     <div class="modal-section-title">Popular</div>
                     <div class="modal-grid">
                         <div class="modal-design-card">
