Add 30+ more converters - expanded image, video, audio, document, and archive categories

--- a/frontend/converters.html
+++ b/frontend/converters.html
@@ -406,6 +406,55 @@
                         <h3>HEIC to JPG</h3>
                         <p>Convert iPhone photos to JPG</p>
                     </div>
+                    <div class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-image"></i>
+                        </div>
+                        <h3>BMP to PNG</h3>
+                        <p>Convert BMP to PNG format</p>
+                    </div>
+                    <div class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-file-image"></i>
+                        </div>
+                        <h3>TIFF to JPG</h3>
+                        <p>Convert TIFF to JPG format</p>
+                    </div>
+                    <div class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-image"></i>
+                        </div>
+                        <h3>ICO to PNG</h3>
+                        <p>Convert icon files to PNG</p>
+                    </div>
+                    <div class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-file-image"></i>
+                        </div>
+                        <h3>SVG to PNG</h3>
+                        <p>Convert vector SVG to PNG</p>
+                    </div>
+                    <div class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-image"></i>
+                        </div>
+                        <h3>PNG to WEBP</h3>
+                        <p>Convert PNG to WEBP format</p>
+                    </div>
+                    <div class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-file-image"></i>
+                        </div>
+                        <h3>JPG to WEBP</h3>
+                        <p>Convert JPG to WEBP format</p>
+                    </div>
+                    <div class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-image"></i>
+                        </div>
+                        <h3>PSD to PNG</h3>
+                        <p>Convert Photoshop to PNG</p>
+                    </div>
                 </div>
             </div>
 
@@ -457,6 +506,55 @@
                         </div>
                         <h3>MP4 to GIF</h3>
                         <p>Convert video to animated GIF</p>
+                    </div>
+                    <div class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-film"></i>
+                        </div>
+                        <h3>FLV to MP4</h3>
+                        <p>Convert Flash video to MP4</p>
+                    </div>
+                    <div class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-video"></i>
+                        </div>
+                        <h3>WMV to MP4</h3>
+                        <p>Convert Windows media to MP4</p>
+                    </div>
+                    <div class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-film"></i>
+                        </div>
+                        <h3>3GP to MP4</h3>
+                        <p>Convert 3GP mobile to MP4</p>
+                    </div>
+                    <div class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-video"></i>
+                        </div>
+                        <h3>MP4 to WEBM</h3>
+                        <p>Convert MP4 to WEBM format</p>
+                    </div>
+                    <div class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-film"></i>
+                        </div>
+                        <h3>VOB to MP4</h3>
+                        <p>Convert DVD video to MP4</p>
+                    </div>
+                    <div class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-video"></i>
+                        </div>
+                        <h3>MTS to MP4</h3>
+                        <p>Convert AVCHD to MP4</p>
+                    </div>
+                    <div class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-film"></i>
+                        </div>
+                        <h3>M4V to MP4</h3>
+                        <p>Convert iTunes video to MP4</p>
                     </div>
                 </div>
             </div>
@@ -510,6 +608,55 @@
                         <h3>AAC to MP3</h3>
                         <p>Convert AAC to MP3 format</p>
                     </div>
+                    <div class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-headphones"></i>
+                        </div>
+                        <h3>WMA to MP3</h3>
+                        <p>Convert Windows audio to MP3</p>
+                    </div>
+                    <div class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-music"></i>
+                        </div>
+                        <h3>OPUS to MP3</h3>
+                        <p>Convert OPUS to MP3 format</p>
+                    </div>
+                    <div class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-headphones"></i>
+                        </div>
+                        <h3>AMR to MP3</h3>
+                        <p>Convert voice recording to MP3</p>
+                    </div>
+                    <div class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-music"></i>
+                        </div>
+                        <h3>MP3 to OGG</h3>
+                        <p>Convert MP3 to OGG format</p>
+                    </div>
+                    <div class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-headphones"></i>
+                        </div>
+                        <h3>MP3 to M4A</h3>
+                        <p>Convert MP3 to M4A format</p>
+                    </div>
+                    <div class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-music"></i>
+                        </div>
+                        <h3>WAV to FLAC</h3>
+                        <p>Convert WAV to lossless FLAC</p>
+                    </div>
+                    <div class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-headphones"></i>
+                        </div>
+                        <h3>AIFF to MP3</h3>
+                        <p>Convert Apple audio to MP3</p>
+                    </div>
                 </div>
             </div>
 
@@ -562,6 +709,69 @@
                         <h3>PDF to JPG</h3>
                         <p>Extract images from PDF</p>
                     </div>
+                    <div class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-file-code"></i>
+                        </div>
+                        <h3>HTML to PDF</h3>
+                        <p>Convert web pages to PDF</p>
+                    </div>
+                    <div class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-file-alt"></i>
+                        </div>
+                        <h3>TXT to PDF</h3>
+                        <p>Convert text files to PDF</p>
+                    </div>
+                    <div class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-file-word"></i>
+                        </div>
+                        <h3>DOCX to TXT</h3>
+                        <p>Convert Word to plain text</p>
+                    </div>
+                    <div class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-file-pdf"></i>
+                        </div>
+                        <h3>PDF to Excel</h3>
+                        <p>Convert PDF tables to Excel</p>
+                    </div>
+                    <div class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-file-powerpoint"></i>
+                        </div>
+                        <h3>PDF to PPT</h3>
+                        <p>Convert PDF to PowerPoint</p>
+                    </div>
+                    <div class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-file-alt"></i>
+                        </div>
+                        <h3>EPUB to PDF</h3>
+                        <p>Convert eBooks to PDF</p>
+                    </div>
+                    <div class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-file-word"></i>
+                        </div>
+                        <h3>RTF to DOCX</h3>
+                        <p>Convert Rich Text to Word</p>
+                    </div>
+                    <div class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-file-csv"></i>
+                        </div>
+                        <h3>CSV to Excel</h3>
+                        <p>Convert CSV to Excel format</p>
+                    </div>
+                    <div class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-file-excel"></i>
+                        </div>
+                        <h3>Excel to CSV</h3>
+                        <p>Convert Excel to CSV format</p>
+                    </div>
                 </div>
             </div>
 
@@ -613,6 +823,34 @@
                         </div>
                         <h3>Compress Video</h3>
                         <p>Reduce video file size</p>
+                    </div>
+                    <div class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-file-archive"></i>
+                        </div>
+                        <h3>TAR to ZIP</h3>
+                        <p>Convert TAR archives to ZIP</p>
+                    </div>
+                    <div class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-file-archive"></i>
+                        </div>
+                        <h3>ZIP to 7Z</h3>
+                        <p>Convert ZIP to 7Z format</p>
+                    </div>
+                    <div class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-compress"></i>
+                        </div>
+                        <h3>Compress Audio</h3>
+                        <p>Reduce audio file size</p>
+                    </div>
+                    <div class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-file-archive"></i>
+                        </div>
+                        <h3>GZ to ZIP</h3>
+                        <p>Convert Gzip to ZIP format</p>
                     </div>
                 </div>
             </div>
